<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jesse.quicksum.MainActivity">

    <TextView
        android:id="@+id/sum_text"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="add1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="add2"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="add3"
            android:text="@string/_3" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="add4"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="add5"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="add6"
            android:text="@string/_6" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="add7"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="add8"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="add9"
            android:text="@string/_9" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/otherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:onClick="otherButton"
            android:text="@string/other" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearText"
            android:text="@string/clear"/>
    </LinearLayout>






</LinearLayout>
